--- a/templates/dappx/base.html
+++ b/templates/dappx/base.html
@@ -62,8 +62,8 @@
 	function setCard(){
 		tokenParams["card"]["number"] = document.getElementById('tarjeta').value;
 		tokenParams["card"]["name"] = document.getElementById('nombre').value;
-		tokenParams["card"]["year"] = document.getElementById('ano').value;
-		tokenParams["card"]["month"] = document.getElementById('mes').value;
+		tokenParams["card"]["exp_year"] = document.getElementById('ano').value;
+		tokenParams["card"]["exp_month"] = document.getElementById('mes').value;
 		tokenParams["card"]["cvc"] = document.getElementById('cvc').value;
 		console.log("asd");
 	}
