--- a/templates/dappx/registration.html
+++ b/templates/dappx/registration.html
@@ -21,9 +21,7 @@
           <input id="mes" type="text" name="Mes" value="12"></br>
           Ano
           <input id="ano" type="text" name="ANO" value="2020"></br>
-          <button type="button" onclick="setCard();Mytokenize()">Click Me!</button>
-          <input type="submit" name="" value="Register" onclick="setCard();Mytokenize()">
-          <script>console.log(document.getElementById("id_username").value);</script>
+          <button type="button" onclick="setCard();Mytokenize()">Registrar!</button>
         </form>
 
       {% endif %}
